@@ -11,6 +11,9 @@
   * Correct short-circuiting operation for no-op fetches in the server.
     (Dave Borowitz)
 
+  * Support parsing git mbox patches without a version tail, as generated by Mercurial. 
+    (Jelmer Vernooij)
+
 0.6.2	2010-10-16
 
  BUG FIXES
